<resources>
    <string name="app_name">Routina</string>
    <string name="image_description">img</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempor sem tortor, sed malesuada mi tempor sed. Maecenas sagittis augue est, vel eleifend justo venenatis ut. Suspendisse bibendum tortor ut diam hendrerit, non hendrerit dui pellentesque. Etiam quis nunc euismod, placerat urna sed, placerat lectus. Ut vel laoreet ante. Maecenas dolor elit, dictum id magna eget, eleifend accumsan tellus. Aenean blandit mi et elit interdum fringilla. Aenean vitae dolor ut est bibendum laoreet. Donec lacinia pharetra diam, a bibendum nunc posuere vel. Fusce sagittis dapibus augue, pretium lacinia ipsum malesuada pharetra. Aenean lectus ante, volutpat sed finibus ac, eleifend a nisl. Quisque mattis, tellus sed eleifend tristique, ante dolor imperdiet purus, eu tempor felis tellus lobortis arcu.</string>
    <string name="routines">Routines</string>
    <string name="automation">Automation</string>
    <string name="media">Media</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="dialog_set_text_title">Set Text</string>
    <string name="dialog_enter_hint">Enter</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>
    <string name="dialog_website_link_hint">Website Link</string>
    <string name="dialog_open_url_title">Open URL</string>
    <string name="dialog_show_toast_title">Show Toast</string>
    <string name="text_hint">Text</string>
    <string name="long_duration">Long Duration</string>
    <string name="style">Style</string>
    <string name="icon">Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="builder">Builder</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routine_title">Routine Title</string>
    <string name="edit_routine">Edit Routine</string>
</resources>