<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/shape_dialog_background"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/dialog_set_text_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alertTitle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/dialog_enter_hint"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/button_done"
            android:text="@string/button_cancel"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input"
            android:layout_alignParentEnd="true"
            android:text="@string/button_done"
            android:textAllCaps="false" />


    </RelativeLayout>

</RelativeLayout>